--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2022-11-22.html">2022-11-22</a></div>
 <div><a href="./html/2022-11-21.html">2022-11-21</a></div>
 <div><a href="./html/2022-11-18.html">2022-11-18</a></div>
 <div><a href="./html/2022-11-17.html">2022-11-17</a></div>
