--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2022-11-24.html">2022-11-24</a></div>
 <div><a href="./html/2022-11-23.html">2022-11-23</a></div>
 <div><a href="./html/2022-11-22.html">2022-11-22</a></div>
 <div><a href="./html/2022-11-21.html">2022-11-21</a></div>
