--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2022-11-30.html">2022-11-30</a></div>
 <div><a href="./html/2022-11-29.html">2022-11-29</a></div>
 <div><a href="./html/2022-11-28.html">2022-11-28</a></div>
 <div><a href="./html/2022-11-25.html">2022-11-25</a></div>
