--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2022-12-06.html">2022-12-06</a></div>
 <div><a href="./html/2022-12-05.html">2022-12-05</a></div>
 <div><a href="./html/2022-12-02.html">2022-12-02</a></div>
 <div><a href="./html/2022-12-01.html">2022-12-01</a></div>
