--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2022-12-09.html">2022-12-09</a></div>
 <div><a href="./html/2022-12-08.html">2022-12-08</a></div>
 <div><a href="./html/2022-12-07.html">2022-12-07</a></div>
 <div><a href="./html/2022-12-06.html">2022-12-06</a></div>
