--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2022-12-19.html">2022-12-19</a></div>
 <div><a href="./html/2022-12-16.html">2022-12-16</a></div>
 <div><a href="./html/2022-12-15.html">2022-12-15</a></div>
 <div><a href="./html/2022-12-14.html">2022-12-14</a></div>
