--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2022-12-22.html">2022-12-22</a></div>
 <div><a href="./html/2022-12-21.html">2022-12-21</a></div>
 <div><a href="./html/2022-12-20.html">2022-12-20</a></div>
 <div><a href="./html/2022-12-19.html">2022-12-19</a></div>
