--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2022-12-27.html">2022-12-27</a></div>
 <div><a href="./html/2022-12-26.html">2022-12-26</a></div>
 <div><a href="./html/2022-12-23.html">2022-12-23</a></div>
 <div><a href="./html/2022-12-22.html">2022-12-22</a></div>
