--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-01-02.html">2023-01-02</a></div>
 <div><a href="./html/2022-12-30.html">2022-12-30</a></div>
 <div><a href="./html/2022-12-29.html">2022-12-29</a></div>
 <div><a href="./html/2022-12-28.html">2022-12-28</a></div>
