--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-01-06.html">2023-01-06</a></div>
 <div><a href="./html/2023-01-05.html">2023-01-05</a></div>
 <div><a href="./html/2023-01-04.html">2023-01-04</a></div>
 <div><a href="./html/2023-01-03.html">2023-01-03</a></div>
