--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-01-10.html">2023-01-10</a></div>
 <div><a href="./html/2023-01-09.html">2023-01-09</a></div>
 <div><a href="./html/2023-01-06.html">2023-01-06</a></div>
 <div><a href="./html/2023-01-05.html">2023-01-05</a></div>
