--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-01-13.html">2023-01-13</a></div>
 <div><a href="./html/2023-01-12.html">2023-01-12</a></div>
 <div><a href="./html/2023-01-11.html">2023-01-11</a></div>
 <div><a href="./html/2023-01-10.html">2023-01-10</a></div>
