--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-01-19.html">2023-01-19</a></div>
 <div><a href="./html/2023-01-18.html">2023-01-18</a></div>
 <div><a href="./html/2023-01-17.html">2023-01-17</a></div>
 <div><a href="./html/2023-01-16.html">2023-01-16</a></div>
