--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-01-27.html">2023-01-27</a></div>
 <div><a href="./html/2023-01-26.html">2023-01-26</a></div>
 <div><a href="./html/2023-01-25.html">2023-01-25</a></div>
 <div><a href="./html/2023-01-24.html">2023-01-24</a></div>
