--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-02-02.html">2023-02-02</a></div>
 <div><a href="./html/2023-02-01.html">2023-02-01</a></div>
 <div><a href="./html/2023-01-31.html">2023-01-31</a></div>
 <div><a href="./html/2023-01-30.html">2023-01-30</a></div>
