--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-02-07.html">2023-02-07</a></div>
 <div><a href="./html/2023-02-06.html">2023-02-06</a></div>
 <div><a href="./html/2023-02-03.html">2023-02-03</a></div>
 <div><a href="./html/2023-02-02.html">2023-02-02</a></div>
