--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-02-10.html">2023-02-10</a></div>
 <div><a href="./html/2023-02-09.html">2023-02-09</a></div>
 <div><a href="./html/2023-02-08.html">2023-02-08</a></div>
 <div><a href="./html/2023-02-07.html">2023-02-07</a></div>
