--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-02-15.html">2023-02-15</a></div>
 <div><a href="./html/2023-02-14.html">2023-02-14</a></div>
 <div><a href="./html/2023-02-13.html">2023-02-13</a></div>
 <div><a href="./html/2023-02-10.html">2023-02-10</a></div>
