--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-02-21.html">2023-02-21</a></div>
 <div><a href="./html/2023-02-20.html">2023-02-20</a></div>
 <div><a href="./html/2023-02-17.html">2023-02-17</a></div>
 <div><a href="./html/2023-02-16.html">2023-02-16</a></div>
