--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-02-28.html">2023-02-28</a></div>
 <div><a href="./html/2023-02-27.html">2023-02-27</a></div>
 <div><a href="./html/2023-02-24.html">2023-02-24</a></div>
 <div><a href="./html/2023-02-23.html">2023-02-23</a></div>
