--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-03-03.html">2023-03-03</a></div>
 <div><a href="./html/2023-03-02.html">2023-03-02</a></div>
 <div><a href="./html/2023-03-01.html">2023-03-01</a></div>
 <div><a href="./html/2023-02-28.html">2023-02-28</a></div>
