--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-03-09.html">2023-03-09</a></div>
 <div><a href="./html/2023-03-08.html">2023-03-08</a></div>
 <div><a href="./html/2023-03-07.html">2023-03-07</a></div>
 <div><a href="./html/2023-03-06.html">2023-03-06</a></div>
