--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-03-20.html">2023-03-20</a></div>
 <div><a href="./html/2023-03-17.html">2023-03-17</a></div>
 <div><a href="./html/2023-03-16.html">2023-03-16</a></div>
 <div><a href="./html/2023-03-15.html">2023-03-15</a></div>
