--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-03-28.html">2023-03-28</a></div>
 <div><a href="./html/2023-03-27.html">2023-03-27</a></div>
 <div><a href="./html/2023-03-24.html">2023-03-24</a></div>
 <div><a href="./html/2023-03-23.html">2023-03-23</a></div>
