--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-04-04.html">2023-04-04</a></div>
 <div><a href="./html/2023-04-03.html">2023-04-03</a></div>
 <div><a href="./html/2023-03-31.html">2023-03-31</a></div>
 <div><a href="./html/2023-03-30.html">2023-03-30</a></div>
