--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-04-07.html">2023-04-07</a></div>
 <div><a href="./html/2023-04-06.html">2023-04-06</a></div>
 <div><a href="./html/2023-04-05.html">2023-04-05</a></div>
 <div><a href="./html/2023-04-04.html">2023-04-04</a></div>
