--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-04-12.html">2023-04-12</a></div>
 <div><a href="./html/2023-04-11.html">2023-04-11</a></div>
 <div><a href="./html/2023-04-10.html">2023-04-10</a></div>
 <div><a href="./html/2023-04-07.html">2023-04-07</a></div>
