--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-04-17.html">2023-04-17</a></div>
 <div><a href="./html/2023-04-14.html">2023-04-14</a></div>
 <div><a href="./html/2023-04-13.html">2023-04-13</a></div>
 <div><a href="./html/2023-04-12.html">2023-04-12</a></div>
