--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-04-20.html">2023-04-20</a></div>
 <div><a href="./html/2023-04-19.html">2023-04-19</a></div>
 <div><a href="./html/2023-04-18.html">2023-04-18</a></div>
 <div><a href="./html/2023-04-17.html">2023-04-17</a></div>
