--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-04-28.html">2023-04-28</a></div>
 <div><a href="./html/2023-04-27.html">2023-04-27</a></div>
 <div><a href="./html/2023-04-26.html">2023-04-26</a></div>
 <div><a href="./html/2023-04-25.html">2023-04-25</a></div>
