--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-05-08.html">2023-05-08</a></div>
 <div><a href="./html/2023-05-05.html">2023-05-05</a></div>
 <div><a href="./html/2023-05-04.html">2023-05-04</a></div>
 <div><a href="./html/2023-05-03.html">2023-05-03</a></div>
