--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-05-12.html">2023-05-12</a></div>
 <div><a href="./html/2023-05-11.html">2023-05-11</a></div>
 <div><a href="./html/2023-05-10.html">2023-05-10</a></div>
 <div><a href="./html/2023-05-09.html">2023-05-09</a></div>
