--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-05-19.html">2023-05-19</a></div>
 <div><a href="./html/2023-05-18.html">2023-05-18</a></div>
 <div><a href="./html/2023-05-17.html">2023-05-17</a></div>
 <div><a href="./html/2023-05-16.html">2023-05-16</a></div>
