--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-05-24.html">2023-05-24</a></div>
 <div><a href="./html/2023-05-23.html">2023-05-23</a></div>
 <div><a href="./html/2023-05-22.html">2023-05-22</a></div>
 <div><a href="./html/2023-05-19.html">2023-05-19</a></div>
