--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-05-26.html">2023-05-26</a></div>
 <div><a href="./html/2023-05-25.html">2023-05-25</a></div>
 <div><a href="./html/2023-05-24.html">2023-05-24</a></div>
 <div><a href="./html/2023-05-23.html">2023-05-23</a></div>
