--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-05-31.html">2023-05-31</a></div>
 <div><a href="./html/2023-05-30.html">2023-05-30</a></div>
 <div><a href="./html/2023-05-29.html">2023-05-29</a></div>
 <div><a href="./html/2023-05-26.html">2023-05-26</a></div>
