--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-06-02.html">2023-06-02</a></div>
 <div><a href="./html/2023-06-01.html">2023-06-01</a></div>
 <div><a href="./html/2023-05-31.html">2023-05-31</a></div>
 <div><a href="./html/2023-05-30.html">2023-05-30</a></div>
