--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-06-07.html">2023-06-07</a></div>
 <div><a href="./html/2023-06-06.html">2023-06-06</a></div>
 <div><a href="./html/2023-06-05.html">2023-06-05</a></div>
 <div><a href="./html/2023-06-02.html">2023-06-02</a></div>
