--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-06-09.html">2023-06-09</a></div>
 <div><a href="./html/2023-06-08.html">2023-06-08</a></div>
 <div><a href="./html/2023-06-07.html">2023-06-07</a></div>
 <div><a href="./html/2023-06-06.html">2023-06-06</a></div>
