--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-06-15.html">2023-06-15</a></div>
 <div><a href="./html/2023-06-14.html">2023-06-14</a></div>
 <div><a href="./html/2023-06-13.html">2023-06-13</a></div>
 <div><a href="./html/2023-06-12.html">2023-06-12</a></div>
