--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-06-21.html">2023-06-21</a></div>
 <div><a href="./html/2023-06-20.html">2023-06-20</a></div>
 <div><a href="./html/2023-06-19.html">2023-06-19</a></div>
 <div><a href="./html/2023-06-16.html">2023-06-16</a></div>
