--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-06-26.html">2023-06-26</a></div>
 <div><a href="./html/2023-06-23.html">2023-06-23</a></div>
 <div><a href="./html/2023-06-22.html">2023-06-22</a></div>
 <div><a href="./html/2023-06-21.html">2023-06-21</a></div>
