--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div><a href="./html/2023-07-05.html">2023-07-05</a></div>
 <div><a href="./html/2023-07-04.html">2023-07-04</a></div>
 <div><a href="./html/2023-07-03.html">2023-07-03</a></div>
 <div><a href="./html/2023-06-30.html">2023-06-30</a></div>
